--- a/DemoExercises/DPE.EFCoreContosoApp/appsettings.json
+++ b/DemoExercises/DPE.EFCoreContosoApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-7cde4387-5d8c-4abc-9335-8359becc1c28;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContext": "Server=JEANPCWIN11\\DEVENV;Database=EFContosoU;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
