--- a/.github/workflows/personal-portfolio.yml
+++ b/.github/workflows/personal-portfolio.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 env:
   AZURE_STATIC_WEBAPP_NAME: personal-portfolio
-  APP_DIRECTORY: portfolio.main
+  APP_DIRECTORY: Portfolio/portfolio.main
   API_DIRECTORY: ''
   OUTPUT: wwwroot
   # For pushes to main, prefer production (or remove this line entirely)
@@ -25,7 +25,7 @@ jobs:
       run: |
         pwd
         ls -la
-        ls -la portfolio.main || true
+        ls -la Portfolio/portfolio.main || true
     - id: builddeploy
       name: Build And Deploy
       uses: Azure/static-web-apps-deploy@v1
