--- a/.github/workflows/portfolio-swa.yml
+++ b/.github/workflows/portfolio-swa.yml
@@ -19,7 +19,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Publish Blazor WASM
-        run: dotnet publish Portfolio/portfolio.main/portfolio.main.csproj -c Release -o publish
+        run: dotnet publish portfolio.main/portfolio.main.csproj -c Release -o publish
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
