--- a/TimesheetManagement/TimesheetManagement/TimesheetManagement.csproj
+++ b/TimesheetManagement/TimesheetManagement/TimesheetManagement.csproj
@@ -69,4 +69,7 @@
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimesheetManagement.Infrastructure\TimesheetManagement.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
