--- a/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
+++ b/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
@@ -13,8 +13,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Mappings\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
   </ItemGroup>
 </Project>
